// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login component renders correctly if logged in 1`] = `
<Redirect
  push={false}
  to="origin"
/>
`;

exports[`login component renders correctly if logged in and previous location is logout 1`] = `
<Redirect
  push={false}
  to="/logout"
/>
`;

exports[`login component renders correctly if logged in, but no previous location 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "pathname": "/",
    }
  }
/>
`;

exports[`login component renders correctly if not logged in 1`] = `
<Fragment>
  <Header />
  <div
    className="card--container"
  >
    <div
      className="ds-l-container card"
    >
      <div
        className="ds-l-row"
      >
        <div
          className="ds-l-col--1 ds-u-margin-left--auto"
        />
        <div
          className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
        >
          <h1
            className="ds-h1"
          >
            Log in
          </h1>
          <form
            onSubmit={[Function]}
          >
            <TextField
              ariaLabel="Enter the email associated with this account."
              id="username"
              label="Email"
              name="username"
              onChange={[Function]}
              type="text"
              value=""
            />
            <Password
              compareTo={Array []}
              onChange={[Function]}
              showMeter={false}
              title="Password"
              value=""
            />
            <Button
              className="ds-u-margin-y--4"
              disabled={true}
              type="submit"
              variation="primary"
            >
              Log in
            </Button>
          </form>
        </div>
        <div
          className="ds-l-col--1 ds-u-margin-right--auto"
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`login component renders correctly if not logged in 2`] = `
<Fragment>
  <Header />
  <div
    className="card--container"
  >
    <div
      className="ds-l-container card"
    >
      <div
        className="ds-l-row"
      >
        <div
          className="ds-l-col--1 ds-u-margin-left--auto"
        />
        <div
          className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
        >
          <h1
            className="ds-h1"
          >
            Log in
          </h1>
          <form
            onSubmit={[Function]}
          >
            <TextField
              ariaLabel="Enter the email associated with this account."
              id="username"
              label="Email"
              name="username"
              onChange={[Function]}
              type="text"
              value="bob"
            />
            <Password
              compareTo={Array []}
              onChange={[Function]}
              showMeter={false}
              title="Password"
              value=""
            />
            <Button
              className="ds-u-margin-y--4"
              disabled={true}
              type="submit"
              variation="primary"
            >
              Log in
            </Button>
          </form>
        </div>
        <div
          className="ds-l-col--1 ds-u-margin-right--auto"
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`login component renders correctly if not logged in 3`] = `
<Fragment>
  <Header />
  <div
    className="card--container"
  >
    <div
      className="ds-l-container card"
    >
      <div
        className="ds-l-row"
      >
        <div
          className="ds-l-col--1 ds-u-margin-left--auto"
        />
        <div
          className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
        >
          <h1
            className="ds-h1"
          >
            Log in
          </h1>
          <form
            onSubmit={[Function]}
          >
            <TextField
              ariaLabel="Enter the email associated with this account."
              id="username"
              label="Email"
              name="username"
              onChange={[Function]}
              type="text"
              value="bob"
            />
            <Password
              compareTo={Array []}
              onChange={[Function]}
              showMeter={false}
              title="Password"
              value="secret"
            />
            <Button
              className="ds-u-margin-y--4"
              disabled={false}
              type="submit"
              variation="primary"
            >
              Log in
            </Button>
          </form>
        </div>
        <div
          className="ds-l-col--1 ds-u-margin-right--auto"
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`login component renders correctly if not logged in and fetching data 1`] = `
<Fragment>
  <Header />
  <div
    className="card--container"
  >
    <div
      className="ds-l-container card"
    >
      <div
        className="ds-l-row"
      >
        <div
          className="ds-l-col--1 ds-u-margin-left--auto"
        />
        <div
          className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
        >
          <h1
            className="ds-h1"
          >
            Log in
          </h1>
          <form
            onSubmit={[Function]}
          >
            <TextField
              ariaLabel="Enter the email associated with this account."
              id="username"
              label="Email"
              name="username"
              onChange={[Function]}
              type="text"
              value=""
            />
            <Password
              compareTo={Array []}
              onChange={[Function]}
              showMeter={false}
              title="Password"
              value=""
            />
            <Button
              className="ds-u-margin-y--4"
              disabled={true}
              type="submit"
              variation="primary"
            >
              Logging in
            </Button>
          </form>
        </div>
        <div
          className="ds-l-col--1 ds-u-margin-right--auto"
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`login component renders correctly if not logged in and there is an error 1`] = `
<Fragment>
  <Header />
  <div
    className="card--container"
  >
    <div
      className="ds-l-container card"
    >
      <div
        className="ds-l-row"
      >
        <div
          className="ds-l-col--1 ds-u-margin-left--auto"
        />
        <div
          className="ds-l-col--12 ds-l-sm-col--10 ds-l-lg-col--6"
        >
          <h1
            className="ds-h1"
          >
            Log in
          </h1>
          <Alert
            role="alert"
            variation="error"
          >
            <strong>
              Sorry!
            </strong>
             Something went wrong. Please try again.
          </Alert>
          <form
            onSubmit={[Function]}
          >
            <TextField
              ariaLabel="Enter the email associated with this account."
              id="username"
              label="Email"
              name="username"
              onChange={[Function]}
              type="text"
              value=""
            />
            <Password
              compareTo={Array []}
              onChange={[Function]}
              showMeter={false}
              title="Password"
              value=""
            />
            <Button
              className="ds-u-margin-y--4"
              disabled={true}
              type="submit"
              variation="primary"
            >
              Log in
            </Button>
          </form>
        </div>
        <div
          className="ds-l-col--1 ds-u-margin-right--auto"
        />
      </div>
    </div>
  </div>
</Fragment>
`;
